# wazobbia-banks

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  setup_runpod.sh  wazobia-rag-build-prompts.md
agents/: intent_classifier.py  orchestrator.py  rag_query.py  system_prompts.py
api/: dependencies.py  main.py
api/routers/: health.py  institutions.py  query.py  voice.py
config/: logging.py  metrics.py  scraper_configs.py  settings.py
ingestion/: scheduler.py  tasks.py
migrations/: env.py
registry/: __init__.py  institutions.py
scratch/: check_wav.py  test_all_tts.py  test_qdrant_search.py  test_voice_query.py  test_voice_query_yo.py
scripts/: collect_bank_data.py  debug_scraper.py  deep_crawl_access.py  deep_crawl_ecobank.py  deep_crawl_fcmb.py  deep_crawl_fidelity.py  deep_crawl_firstbank.py  deep_crawl_generic.py  deep_crawl_gtbank.py  deep_crawl_heritage.py  deep_crawl_jaiz.py  deep_crawl_keystone.py  deep_crawl_kuda.py  deep_crawl_opay.py  deep_crawl_polaris.py  deep_crawl_providus.py  deep_crawl_stanbic.py  deep_crawl_standardchartered.py  deep_crawl_sterling.py  deep_crawl_taj.py  deep_crawl_uba.py  deep_crawl_wema.py  deep_crawl_zenith.py  demo.py  generate_fixtures.py  ingest_all.py  test_stt.py  test_tts.py
store/: __init__.py  postgres.py  qdrant_client.py  redis_client.py
tests/: test_e2e.py  test_hardening.py  test_ingestion.py  test_rag.py  test_stt_engine.py  test_tts_engine.py  test_voice.py
voice/: language_detector.py  normalizer.py  utils.py  vad.py
(+28 files in other folders)
