[project]
name = "wazobia-agent"
version = "0.1.0"
description = "FastAPI application for Wazobia Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic-settings>=2.2.1",
    "pydantic[email]>=2.6.4",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "qdrant-client>=1.8.0",
    "openai>=1.14.1",
    "celery[redis]>=5.3.6",
    "redis>=5.0.3",
    "httpx>=0.27.0",
    "playwright>=1.42.0",
    "trafilatura>=1.8.0",
    "beautifulsoup4>=4.12.3",
    "scrapy>=2.11.1",
    "pdfplumber>=0.11.0",
    "langdetect>=1.0.9",
    "lingua-language-detector>=2.0.2",
    "transformers>=4.38.2,<5.0.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchcodec",
    "numpy<2.0.0",
    "pyarrow<16",
    "datasets<2.18",
    "soundfile>=0.12.1",
    "coqui-tts",
    "f5-tts",
    "outetts",
    "uroman",
    "grpcio-tools>=1.60.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "tiktoken>=0.6.0",
    "bcrypt>=4.0.0",
    "prometheus-client>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
]

[tool.uv]
package = false

[tool.uv.extra-build-dependencies]
grpcio-tools = ["setuptools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
